adding hot encoding

--- a/Create_DB_hours.ipynb
+++ b/Create_DB_hours.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "d3a6a956",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sqlite3\n",
     "import pandas as pd\n",
-    "# connect to the SQLite database (or create it if it doesn't exist)\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
     "conn = sqlite3.connect('database.db')\n",
     "c = conn.cursor()\n",
     "\n",
@@ -43,20 +44,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "824560a3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# connect to the SQLite database (or create it if it doesn't exist)\n",
-    "conn = sqlite3.connect('database.db')\n",
     "\n",
-    "# read the data from the URL into a pandas DataFrame\n",
     "url = \"https://raw.githubusercontent.com/lisanvo/aai500-final-project/main/data/hour.csv?token=GHSAT0AAAAAACDLAAAPWYARUQBGNA2QX6OGZEBMY4Q\"\n",
     "df = pd.read_csv(url)\n",
     "\n",
+    "# Convert 'dteday' to datetime format\n",
+    "df['dteday'] = pd.to_datetime(df['dteday'])\n",
+    "\n",
+    "# Define categorical columns\n",
+    "categorical_columns = ['season', 'yr', 'mnth', 'hr', 'holiday', 'weekday', 'workingday', 'weathersit']\n",
+    "\n",
+    "# Convert the categorical columns to one-hot encoding\n",
+    "df = pd.get_dummies(df, columns=categorical_columns)\n",
+    "\n",
+    "# Define continuous columns\n",
+    "continuous_columns = ['temp', 'atemp', 'hum', 'windspeed']\n",
+    "\n",
+    "# Apply Normalization\n",
+    "scaler = MinMaxScaler()\n",
+    "df[continuous_columns] = scaler.fit_transform(df[continuous_columns])\n",
+    "\n",
+    "conn = sqlite3.connect('database_v2.db')\n",
+    "\n",
+    "# create a new table with the transformed data\n",
     "df.to_sql('data', conn, if_exists='replace', index=False)\n",
     "\n",
+    "# commit the transaction and close the connection\n",
+    "conn.commit()\n",
     "conn.close()\n"
    ]
   },
