--- a/alternative_hypotheses_analysis.ipynb
+++ b/alternative_hypotheses_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "8852649e-043f-40f0-88fb-be92ef502e83",
    "metadata": {
     "noteable": {
@@ -14,6 +14,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "       instant               dteday      temp   atemp   hum  windspeed  \\\n",
+      "0            1  2011-01-01 00:00:00  0.224490  0.2879  0.81   0.000000   \n",
+      "1            2  2011-01-01 00:00:00  0.204082  0.2727  0.80   0.000000   \n",
+      "2            3  2011-01-01 00:00:00  0.204082  0.2727  0.80   0.000000   \n",
+      "3            4  2011-01-01 00:00:00  0.224490  0.2879  0.75   0.000000   \n",
+      "4            5  2011-01-01 00:00:00  0.224490  0.2879  0.75   0.000000   \n",
+      "...        ...                  ...       ...     ...   ...        ...   \n",
+      "17374    17375  2012-12-31 00:00:00  0.244898  0.2576  0.60   0.193018   \n",
+      "17375    17376  2012-12-31 00:00:00  0.244898  0.2576  0.60   0.193018   \n",
+      "17376    17377  2012-12-31 00:00:00  0.244898  0.2576  0.60   0.193018   \n",
+      "17377    17378  2012-12-31 00:00:00  0.244898  0.2727  0.56   0.157870   \n",
+      "17378    17379  2012-12-31 00:00:00  0.244898  0.2727  0.65   0.157870   \n",
+      "\n",
+      "       casual  registered  cnt  season_1  ...  weekday_3  weekday_4  \\\n",
+      "0           3          13   16         1  ...          0          0   \n",
+      "1           8          32   40         1  ...          0          0   \n",
+      "2           5          27   32         1  ...          0          0   \n",
+      "3           3          10   13         1  ...          0          0   \n",
+      "4           0           1    1         1  ...          0          0   \n",
+      "...       ...         ...  ...       ...  ...        ...        ...   \n",
+      "17374      11         108  119         1  ...          0          0   \n",
+      "17375       8          81   89         1  ...          0          0   \n",
+      "17376       7          83   90         1  ...          0          0   \n",
+      "17377      13          48   61         1  ...          0          0   \n",
+      "17378      12          37   49         1  ...          0          0   \n",
+      "\n",
+      "       weekday_5  weekday_6  workingday_0  workingday_1  weathersit_1  \\\n",
+      "0              0          1             1             0             1   \n",
+      "1              0          1             1             0             1   \n",
+      "2              0          1             1             0             1   \n",
+      "3              0          1             1             0             1   \n",
+      "4              0          1             1             0             1   \n",
+      "...          ...        ...           ...           ...           ...   \n",
+      "17374          0          0             0             1             0   \n",
+      "17375          0          0             0             1             0   \n",
+      "17376          0          0             0             1             1   \n",
+      "17377          0          0             0             1             1   \n",
+      "17378          0          0             0             1             1   \n",
+      "\n",
+      "       weathersit_2  weathersit_3  weathersit_4  \n",
+      "0                 0             0             0  \n",
+      "1                 0             0             0  \n",
+      "2                 0             0             0  \n",
+      "3                 0             0             0  \n",
+      "4                 0             0             0  \n",
+      "...             ...           ...           ...  \n",
+      "17374             1             0             0  \n",
+      "17375             1             0             0  \n",
+      "17376             0             0             0  \n",
+      "17377             0             0             0  \n",
+      "17378             0             0             0  \n",
+      "\n",
+      "[17379 rows x 66 columns]\n",
       "Spearmans correlation: 0.423\n"
      ]
     }
@@ -32,6 +85,7 @@
     "\n",
     "# Load the data into a pandas DataFrame\n",
     "df = pd.read_sql_query(query, conn)\n",
+    "print(df)\n",
     "\n",
     "# Convert 'dteday' to datetime format and set it as index for the dataframe\n",
     "df['dteday'] = pd.to_datetime(df['dteday'])\n",
@@ -65,7 +119,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.167\n",
       "Method:                 Least Squares   F-statistic:                     1164.\n",
       "Date:                Wed, 14 Jun 2023   Prob (F-statistic):               0.00\n",
-      "Time:                        11:51:06   Log-Likelihood:            -1.1345e+05\n",
+      "Time:                        19:34:22   Log-Likelihood:            -1.1345e+05\n",
       "No. Observations:               17379   AIC:                         2.269e+05\n",
       "Df Residuals:                   17375   BIC:                         2.269e+05\n",
       "Df Model:                           3                                         \n",
