--- a/src/playground.ipynb
+++ b/src/playground.ipynb
@@ -31,6 +31,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "4366b4b9-3203-4c8e-8f93-9e2bda831c27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read files\n",
+    "data_hour = pd.read_csv('../data/hour.csv', sep=',')\n",
+    "data_day = pd.read_csv('../data/day.csv', sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "83026c81-dc3e-4366-b68a-99e640a4e6cd",
    "metadata": {},
@@ -794,7 +806,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
